--- a/templates/redoc.html
+++ b/templates/redoc.html
@@ -18,6 +18,7 @@
     </style>
   </head>
   <body>
+  <h1>Welcome to YaMDB</h1>
     <redoc spec-url='/static/redoc.yaml'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc/bundles/redoc.standalone.js"> </script>
   </body>
